--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,13 @@
 
 
         <LinearLayout
+            android:id="@+id/normalGame"
             android:layout_width="match_parent"
             android:layout_height="290dp"
             android:layout_marginBottom="15dp"
             android:background="@color/main_blue"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:clickable="true">
 
             <TextView
                 android:id="@+id/textView3"
