--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="63dp"
-        android:text="Tu préfères ?"
+        android:text="@string/title_header"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"
