-Create Category début

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -57,12 +57,14 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/personnel"
         android:layout_width="match_parent"
         android:layout_height="290dp"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="318dp"
         android:background="@color/main_red"
         android:orientation="vertical"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
