--- a/app/src/main/res/layout/fragment_create_category.xml
+++ b/app/src/main/res/layout/fragment_create_category.xml
@@ -5,108 +5,118 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="-16dp">
 
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="145dp"
-        android:layout_marginBottom="556dp"
+        android:id="@+id/Titile"
+        android:layout_width="196dp"
+        android:layout_height="34dp"
         android:text="Créer une catégorie"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.107" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="264dp"
-        android:orientation="vertical"
+
+    <TextView
+        android:id="@+id/ErrorMessage"
+        android:layout_width="304dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="16dp"
+        android:text="Tous les champs sont obligatoires"
+        android:textColor="@color/main_red"
+        android:textSize="20dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <TextView
-            android:id="@+id/imageCategory"
-            android:layout_width="316dp"
-            android:layout_height="31dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="86dp"
-            android:layout_marginEnd="51dp"
-            android:layout_marginBottom="133dp"
-            android:text="Image *"
-            android:textColor="@color/white"
-            android:textSize="18dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Titile" />
 
     <Button
-        android:id="@+id/buttonImage"
+        android:id="@+id/ImageCategory"
         android:layout_width="320dp"
         android:layout_height="36dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="381dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="314dp"
         android:background="@drawable/input_text"
         android:drawableLeft="@drawable/icon_help"
         android:text="Image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonValidate"
-        android:layout_width="220dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="464dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="229dp"
-        android:background="@drawable/input_text"
-        android:drawableLeft="@drawable/icon_help"
-        android:text="Valider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:layout_width="320dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="291dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginBottom="410dp"
-        android:background="@drawable/input_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.483" />
 
     <TextView
-        android:id="@+id/nomCategory"
-        android:layout_width="370dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="264dp"
-        android:layout_marginBottom="442dp"
+        android:id="@+id/imageCategory"
+        android:layout_width="67dp"
+        android:layout_height="27dp"
+        android:text="Image *"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.426" />
+
+    <TextView
+        android:id="@+id/imageCategory2"
+        android:layout_width="58dp"
+        android:layout_height="22dp"
         android:text="Nom *"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.28" />
+
+    <EditText
+        android:id="@+id/NameCategory"
+        android:layout_width="320dp"
+        android:layout_height="30dp"
+        android:background="@drawable/input_text"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.439"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.336" />
+
+    <ImageView
+        android:id="@+id/ImageSelectedCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/ConfirmCreation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ImageCategory"/>
+
+    <Button
+        android:id="@+id/ConfirmCreation"
+        android:layout_width="220dp"
+        android:layout_height="38dp"
+        android:background="@drawable/input_text"
+        android:drawableLeft="@drawable/icon_help"
+        android:text="Valider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.815" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
