US 1 - Logo + nom + refactor

--- a/app/src/main/res/layout/fragment_create_category.xml
+++ b/app/src/main/res/layout/fragment_create_category.xml
@@ -43,7 +43,7 @@
         android:id="@+id/ImageCategory"
         android:layout_width="320dp"
         android:layout_height="36dp"
-        android:background="@drawable/input_text"
+        android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
         android:text="Image"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,7 +85,7 @@
         android:id="@+id/NameCategory"
         android:layout_width="320dp"
         android:layout_height="30dp"
-        android:background="@drawable/input_text"
+        android:background="@drawable/component_input_text"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
         android:id="@+id/ConfirmCreation"
         android:layout_width="220dp"
         android:layout_height="38dp"
-        android:background="@drawable/input_text"
+        android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
         android:text="Valider"
         app:layout_constraintBottom_toBottomOf="parent"
