--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -114,7 +114,7 @@
         android:layout_marginTop="264dp"
         android:layout_marginEnd="179dp"
         android:layout_marginBottom="264dp"
-        android:background="@drawable/circle"
+        android:background="@drawable/component_circle"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
