--- a/app/src/main/res/layout/fragment_personnel.xml
+++ b/app/src/main/res/layout/fragment_personnel.xml
@@ -12,7 +12,7 @@
         android:id="@+id/CreateCategory"
         android:layout_width="139dp"
         android:layout_height="39dp"
-        android:background="@drawable/input_text"
+        android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_add"
         android:text="Ajouter"
         app:layout_constraintBottom_toBottomOf="parent"
