--- a/app/src/main/res/layout/fragment_personnel.xml
+++ b/app/src/main/res/layout/fragment_personnel.xml
@@ -10,30 +10,35 @@
 
     <Button
         android:id="@+id/CreateCategory"
-        android:layout_width="139dp"
-        android:layout_height="39dp"
+        android:layout_width="132dp"
+        android:layout_height="0dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_add"
         android:text="Ajouter"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.941"
+        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintHorizontal_bias="0.943"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.076" />
+        app:layout_constraintVertical_bias="0.117"/>
 
     <GridLayout
-        android:layout_width="341dp"
-        android:layout_height="428dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#3F51B5"
         android:backgroundTint="@color/main_background"
         android:columnCount="3"
         android:rowCount="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.7"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.617"
+        app:layout_constraintVertical_bias="0.74"
+        app:layout_constraintWidth_percent="0.85"
         tools:context=".MainActivity">
 
         <ImageView
@@ -99,6 +104,15 @@
             android:src="@drawable/ic_launcher_background" />
 
         <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="94dp"
+            android:layout_height="90dp"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_launcher_background" />
+
+        <ImageView
             android:id="@+id/imageView7"
             android:layout_width="94dp"
             android:layout_height="90dp"
@@ -139,10 +153,13 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="127dp"
-        android:layout_height="37dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="Catégories"
-        android:textSize="25dp"
+        android:textSize="25sp"
+        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintWidth_percent="1"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
