--- a/app/src/main/res/layout/fragment_normal_game.xml
+++ b/app/src/main/res/layout/fragment_normal_game.xml
@@ -10,7 +10,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/normalGame"
+        android:id="@+id/choiceOne"
         android:layout_width="match_parent"
         android:layout_height="290dp"
         android:layout_marginBottom="310dp"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textChoiceOne"
             android:layout_width="364dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="23dp"
@@ -29,12 +29,12 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="121dp"
             android:text="Chat"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="18dp"
-            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -44,6 +44,8 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/choiceTwo"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="290dp"
         android:layout_alignParentBottom="true"
@@ -57,7 +59,7 @@
 
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textChoiceTwo"
             android:layout_width="364dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="23dp"
