- US 3 Recyclerview fix 1

--- a/app/src/main/res/layout/category_item_list.xml
+++ b/app/src/main/res/layout/category_item_list.xml
@@ -8,20 +8,21 @@
 
 
     <TextView
-        android:id="@+id/category_image"
+        android:id="@+id/category_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="212dp"
         android:textAlignment="center"
         android:textAppearance="?attr/textAppearanceListItem"
+        app:layout_constraintBottom_toBottomOf="@+id/category_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/category_name"
         tools:text="Category Name" />
 
     <ImageView
-        android:id="@+id/category_name"
+        android:id="@+id/category_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
