--- a/app/src/main/res/layout/pair_item_list.xml
+++ b/app/src/main/res/layout/pair_item_list.xml
@@ -111,8 +111,8 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />
 
 
-    <ImageButton
-        android:id="@+id/deletePairButton"
+    <ImageView
+        android:id="@+id/deletePairImage"
         android:layout_width="30dp"
         android:layout_height="34dp"
         android:backgroundTint="@color/main_background"
