--- a/app/src/main/res/layout/fragment_create_pair.xml
+++ b/app/src/main/res/layout/fragment_create_pair.xml
@@ -57,11 +57,10 @@
         android:id="@+id/deleteImageChoiceOne"
         android:layout_width="44dp"
         android:layout_height="48dp"
+        android:layout_marginStart="16dp"
         android:background="@color/main_background"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintStart_toEndOf="@+id/selectImageChoiceOne"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.37"
@@ -190,14 +189,13 @@
         android:id="@+id/deleteImageChoiceTwo"
         android:layout_width="44dp"
         android:layout_height="48dp"
+        android:layout_marginStart="12dp"
         android:background="@color/main_background"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.36"
-        app:layout_constraintStart_toEndOf="@+id/selectImageChoiceOne"
+        app:layout_constraintStart_toEndOf="@+id/selectImageChoiceTwo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.727"
+        app:layout_constraintVertical_bias="0.729"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 
     <TextView
