--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mode normal"
-            android:textSize="18dp"
+            android:textSize="22sp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,8 +57,9 @@
             app:layout_constraintWidth_percent="0.8"
             android:text="Dans ce mode, vous aurez à chaque étape, le choix entre deux propositions. Les étapes changeront à chaque choix que vous faites un choix. Il n'y a pas de fin ... Choisissez tant que vous voulez !"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintHeight_percent="0.6"
             app:layout_constraintHorizontal_bias="0.485"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mode personnel"
-            android:textSize="18dp"
+            android:textSize="22sp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +99,8 @@
             android:text="Dans ce mode, vous aurez la possibilité de créer vos propores catégories et de les éditer comme vous voulez. Vous pourrez ajouter une image et un nom à vos catégories, les modifier, ajouter des questions ..."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.5"
+            android:textSize="18sp"
+            app:layout_constraintHeight_percent="0.6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.8" />
