--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,31 +22,26 @@
             android:id="@+id/titleNormal"
             android:layout_width="162dp"
             android:layout_height="34dp"
-            android:layout_marginStart="31dp"
-            android:layout_marginTop="57dp"
-            android:layout_marginEnd="218dp"
-            android:layout_marginBottom="199dp"
+
             android:elevation="2dp"
             android:text="Mode normal"
             android:textColor="@color/white"
-            android:textSize="23dp"
+            android:textSize="23sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.096"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.257" />
 
         <TextView
             android:id="@+id/textNormal"
             android:layout_width="364dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="124dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="121dp"
             android:text="Jouez en faisant votre choix parmis une \nsérie de questions diverses et variées"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,18 +70,16 @@
             android:id="@+id/titleCreation"
             android:layout_width="219dp"
             android:layout_height="32dp"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="82dp"
-            android:layout_marginEnd="169dp"
-            android:layout_marginBottom="176dp"
             android:text="Mode création"
             android:textColor="@color/white"
-            android:textSize="23dp"
+            android:textSize="23sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.119"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.313" />
 
         <TextView
             android:id="@+id/textCreation"
@@ -98,7 +91,7 @@
             android:layout_marginBottom="133dp"
             android:text="Créez et jouez avec vos propres catégories"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
