--- a/app/src/main/res/layout/pair_item_list.xml
+++ b/app/src/main/res/layout/pair_item_list.xml
@@ -10,8 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout5"
-        android:layout_width="413dp"
-        android:layout_height="59dp"
+        android:layout_width="413sp"
+        android:layout_height="59sp"
         android:layout_marginTop="16dp"
         android:background="@color/main_blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,6 @@
             android:id="@+id/textChoiceOne"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:visibility="invisible"
@@ -51,7 +50,7 @@
         android:id="@+id/barTopPair"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="16sp"
         android:background="@color/white"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +62,7 @@
         android:id="@+id/constraintLayout6"
         android:layout_width="409dp"
         android:layout_height="59dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="12sp"
         android:background="@color/main_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -74,13 +73,12 @@
             android:id="@+id/textChoiceTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.472"
+            app:layout_constraintHorizontal_bias="0.476"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.488" />
