--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -32,7 +32,7 @@
             android:id="@+id/edtiCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="96sp"
             android:text="Modifier"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.135"
@@ -44,7 +44,7 @@
             android:id="@+id/addPaire"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="200sp"
             android:text="Ajouter paire"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.135"
@@ -56,19 +56,19 @@
             android:id="@+id/seePaires"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="200sp"
             android:text="Voir paires"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.851"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageCategory"
-            app:layout_constraintWidth_percent="0.4" />
+            app:layout_constraintWidth_percent="0.4"/>
 
         <Button
             android:id="@+id/deleteCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="96sp"
             android:text="Supprimer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.855"
@@ -80,7 +80,7 @@
             android:id="@+id/categoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="28sp"
             android:text="TextView"
             android:textColor="@color/white"
             android:textSize="25sp"
@@ -96,7 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="318dp"
+        android:layout_marginTop="318sp"
         android:background="@color/main_red"
         android:clickable="true"
         android:orientation="vertical"
@@ -113,14 +113,10 @@
             android:id="@+id/textChoiceTwo"
             android:layout_width="364dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="133dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="133dp"
             android:text="Lancer une partie"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -132,10 +128,6 @@
         android:layout_height="72dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="264dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="264dp"
         android:background="@drawable/component_circle"
         android:gravity="center"
         android:orientation="vertical"
@@ -148,13 +140,9 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="23dp"
-            android:layout_marginEnd="22dp"
-            android:layout_marginBottom="22dp"
             android:text="OU"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
