--- a/app/src/main/res/layout/fragment_create_category.xml
+++ b/app/src/main/res/layout/fragment_create_category.xml
@@ -59,7 +59,7 @@
             android:layout_height="27dp"
             android:text="Image *"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.055"
@@ -99,7 +99,7 @@
             android:layout_height="22dp"
             android:text="Nom *"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.054"
